--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-transformer-remark": "^2.3.0",
     "gatsby-transformer-sharp": "^2.1.14",
     "graphiql": "^0.12.0",
+    "graphql": "^14.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
