--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-catch-links": "^2.0.11",
     "gatsby-plugin-manifest": "^2.0.19",
     "gatsby-plugin-offline": "^2.0.24",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.0",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-sharp": "^2.0.22",
     "gatsby-source-filesystem": "^2.0.23",
@@ -22,7 +23,8 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
-    "react-icons": "^3.4.0"
+    "react-icons": "^3.4.0",
+    "react-particles-js": "^2.4.2"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
