--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "emotion": "^10.0.7",
     "gatsby": "^2.1.18",
     "gatsby-image": "^2.0.29",
@@ -19,12 +20,16 @@
     "gatsby-transformer-sharp": "^2.1.14",
     "graphiql": "^0.12.0",
     "graphql": "^14.1.1",
+    "jquery": "^3.3.1",
+    "popper": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.4.0",
-    "react-particles-js": "^2.4.2"
+    "react-particles-js": "^2.4.2",
+    "reactstrap": "^7.1.0"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
