Added Global Context Provider and dark mode functionality

--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.28",
     "bootstrap": "^4.3.1",
     "emotion": "^10.0.7",
+    "emotion-theming": "^10.0.27",
     "gatsby": "^2.1.18",
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-catch-links": "^2.0.11",
+    "gatsby-plugin-emotion": "^4.3.1",
     "gatsby-plugin-google-analytics": "^2.0.17",
     "gatsby-plugin-manifest": "^2.0.19",
     "gatsby-plugin-offline": "^2.0.24",
@@ -21,6 +24,7 @@
     "gatsby-transformer-sharp": "^2.1.14",
     "graphiql": "^0.12.0",
     "graphql": "^14.1.1",
+    "local-storage-fallback": "^4.1.1",
     "popper": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
