--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.5.0",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
+    "framer-motion": "^2.1.2",
     "gatsby": "^2.23.3",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-catch-links": "^2.3.5",
